# gh-report

./: Cargo.toml  README.md  gh-report
.github/workflows/: ci.yml  release.yml
src/: adapter.rs  gh.rs  graphql.rs  main.rs  presenter.rs
src/fixtures/: contributionsCollection.json  myContributions.json
src/gql/: me.gql  myquery.gql
src/snapshots/: gh_report__adapter__test__combine.snap  gh_report__presenter__test__to_string_pretty.snap
