[package]
edition = "2021"
name = "gh-report"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4.19", features = ["serde"]}
graphql_client = {version = "0.10.0", features = ["reqwest"]}
reqwest = "0.11.7"
serde = "1.0.130"
tokio = {version = "1.14.0", features = ["full"]}
